[package]
name = "quizsaber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde_json = "1.0.87"
#rusqlite = "0.28.0"
stereokit = {path = "../../IdeaProjects/stereokit-rs2", features = ["high-level"]}
#stereokit = "0.7.0"
glam = {version = "0.22.0", features = ["mint", "num-traits"]}
prisma = "0.1.1"
anyhow = "1.0.66"
rand = {version = "0.8.5", features = ["std", "alloc"]}
mint = {version = "0.5.1"}
spaced-rs = {path = "../../IdeaProjects/spaced-rs"}
random-number = "0.1.8"
#cgmath = {version = "0.18.0", features = ["mint"]}
#collision = "0.20.1"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = {version = "0.6.2", features = ["logger", "android_logger"]}

[package.metadata.android]
apk_label = "Quiz Saber"
fullscreen = true
runtime_libs = "./common_lib"
target_sdk_version = 29
assets = "./assets"

[package.metadata.android.application]
debuggable = true
label = "Quiz Saber"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.handtracking.version"
value = "V2.0"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.ossplash"
value = "true"


#[package.metadata.android.application.activity]
#config_changes = "screenSize|screenLayout|orientation|keyboardHidden|keyboard|navigation|uiMode"
#launch_mode = "singleTask"
#orientation = "landscape"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.access_network_state"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest|quest2"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true
version = 1

[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"
required = true
version = 1

[package.metadata.android.signing.release]
path = "./hotham_examples.keystore"
keystore_password = "chomsky-vigilant-spa"

#[package.metadata.android.sdk]
#min_sdk_version = 24